--- a/2-Intro-HTML-CSS/4-Paragraphs/index.html
+++ b/2-Intro-HTML-CSS/4-Paragraphs/index.html
@@ -2,3 +2,7 @@
 <h2>HTML</h2>
 <p>I want to learn coding</p>
 <p>Find free resources on zenva.com</p>
+<h1>Web Development</h1>
+<h2>HTML</h2>
+<p>I want to learn coding</p>
+<p>Find free resources on zenva.com</p>
