--- a/2-Intro-HTML-CSS/6-Images/index.html
+++ b/2-Intro-HTML-CSS/6-Images/index.html
@@ -2,7 +2,7 @@
 <h2>HTML</h2>
 <p>I want to learn coding</p>
 
-<img src="Images/background.png"/>
+<img src="background.png"/>
 
 <p>Find free resources on <a href="https://zenva.com" title="Learn Programming">Zenva</a></p>
 <p>Link to <a href="newpage.html">another page</a></p>
