Correct spelling error in HTML document head

--- a/2-Intro-HTML-CSS/12-Structure/index.html
+++ b/2-Intro-HTML-CSS/12-Structure/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>This is a page</title>
-        <meta charest="UTF-8">
+        <meta charset="UTF-8">
         <meta name="description" content="This is what Google will show!">
         <link rel="icon" href="favicon.ico">
     </head>
