--- a/2-Intro-HTML-CSS/19-BorderMargin/index.html
+++ b/2-Intro-HTML-CSS/19-BorderMargin/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Learn web development on Zenva.com</title>
-        <meta charest="UTF=8">
+        <meta charset="UTF=8">
         <meta name="description" content="This is what Google will show!">
         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="style.css">
