--- a/3-First-Rspnsv-Website/index.html
+++ b/3-First-Rspnsv-Website/index.html
@@ -16,5 +16,37 @@
                 <li>Contact</li>
             </ul>
         </div>
+        <div class="wrapper">
+            <div class="image-area">
+                <div class="image-text centered-container">Learn coding at Zenva.com</div>
+            </div>
+            <div class="intro-text centered-container">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+            <div class="services centered-container">
+                <div class="single-service">
+                    <img src="Images/ZenvaBanner.png"/>
+                    <p>
+                        integer enim neque volutpat ac tincidunt vitae semper
+                    </p>
+                </div>
+                <div class="single-service">
+                    <img src="Images/ZenvaBanner.png"/>
+                    <p>
+                        integer enim neque volutpat ac tincidunt vitae semper
+                    </p>
+                </div>
+                <div class="single-service">
+                    <img src="Images/ZenvaBanner.png"/>
+                    <p>
+                        integer enim neque volutpat ac tincidunt vitae semper
+                    </p>
+                </div>
+                <div class="single-service">
+                    <img src="Images/ZenvaBanner.png"/>
+                    <p>
+                        integer enim neque volutpat ac tincidunt vitae semper
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
