--- a/4-Rspnsv-Web-Design/media-queries.html
+++ b/4-Rspnsv-Web-Design/media-queries.html
@@ -6,6 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
          
+         /* Applies to everything unless overridden elsewhere */
+
          * {
             margin: 0;
          }
@@ -14,6 +16,7 @@
             background: rgba(255,0,0,.25);
          }
 
+         /* Applies to any device whose screen width is 768px or wider */
 
          @media screen and (min-width: 768px) {
 
@@ -22,6 +25,8 @@
          }
 
          }
+         
+         /* Applies to any device whose screen width is 1200px or wider */
 
          @media screen and (min-width: 1200px) {
 
