--- a/4-Rspnsv-Web-Design/media-queries.html
+++ b/4-Rspnsv-Web-Design/media-queries.html
@@ -40,5 +40,10 @@
    </head>
    <body>
       
+      <header>Header</header>
+      <section>Section</section>
+      <aside>Aside</aside>
+      <footer>Footer</footer>
+
    </body>
 </html>
