--- a/4-Rspnsv-Web-Design/media-queries.html
+++ b/4-Rspnsv-Web-Design/media-queries.html
@@ -16,13 +16,44 @@
             background: rgba(255,0,0,.25);
          }
 
+         header {
+            background: rgba(0,0,0,.25);
+            margin-bottom: 10px;
+            height: 50px
+         }
+
+         section {
+            background: rgba(0,0,0,.25);
+            margin-bottom: 10px;
+            height: 1000px;
+         }
+
+         aside {
+            background: rgba(0,0,0,.25);
+            margin-bottom: 10px;
+            height: 1000px;
+            display: none;
+         }
+
+         footer {
+            background: rgba(0,0,0,.25);
+            height: 25px;
+         }
+
+
+
+
          /* Applies to any device whose screen width is 768px or wider */
 
          @media screen and (min-width: 768px) {
 
             body {
-            background: rgba(0,255,0,.25);
-         }
+               background: rgba(0,255,0,.25);
+            }
+
+            aside {
+               display: block;
+            }
 
          }
          
@@ -31,8 +62,16 @@
          @media screen and (min-width: 1200px) {
 
             body {
-            background: rgba(0,0,255,.25);
-         }
+               background: rgba(0,0,255,.25);
+            }
+
+            section {
+               float: left;
+            }
+
+            aside {
+               float: right;
+            }
 
          }
       
