--- a/4-Rspnsv-Web-Design/flexbox.html
+++ b/4-Rspnsv-Web-Design/flexbox.html
@@ -6,5 +6,13 @@
    </head>
    <body>
       
+      <div class="parent">
+
+         <div class="child child1">1</div>
+         <div class="child child2">2</div>
+         <div class="child child3">3</div>
+
+      </div>
+
    </body>
 </html>
