--- a/4-Rspnsv-Web-Design/media-queries.html
+++ b/4-Rspnsv-Web-Design/media-queries.html
@@ -67,10 +67,16 @@
 
             section {
                float: left;
+               width: 69%;
             }
 
             aside {
                float: right;
+               width: 30%;
+            }
+
+            footer {
+               clear: both;
             }
 
          }
