Complete module 4 -lesson 13

--- a/4-Rspnsv-Web-Design/grid.html
+++ b/4-Rspnsv-Web-Design/grid.html
@@ -3,8 +3,40 @@
    <head>
       <meta charset="utf-8">
       <title>CSS Grid</title>
+
+      <style>
+
+         #parent {
+            background: rgba(0,0,0,.5);
+            display:grid;
+         }
+
+         .child1 {
+            background: skyblue;
+         }
+
+         .child2 {
+            background: powderblue;
+         }
+
+         .child3 {
+            background: cadetblue;
+         }
+
+
+
+      </style>
+
    </head>
    <body>
       
+      <div id="parent">
+
+         <div class="child1">1</div>
+         <div class="child2">2</div>
+         <div class="child3">3</div>
+
+      </div>
+
    </body>
 </html>
