Complete module 4 - lesson 14

--- a/4-Rspnsv-Web-Design/grid.html
+++ b/4-Rspnsv-Web-Design/grid.html
@@ -9,6 +9,7 @@
          #parent {
             background: rgba(0,0,0,.5);
             display:grid;
+            grid-template-columns: auto auto auto;
          }
 
          .child1 {
@@ -23,6 +24,18 @@
             background: cadetblue;
          }
 
+         .child4 {
+            background: indianred;
+         }
+
+         .child5 {
+            background: salmon;
+         }
+
+         .child6 {
+            background: firebrick;
+         }
+
 
 
       </style>
@@ -35,6 +48,10 @@
          <div class="child1">1</div>
          <div class="child2">2</div>
          <div class="child3">3</div>
+         <div class="child4">4</div>
+         <div class="child5">5</div>
+         <div class="child6">6</div>
+         
 
       </div>
 
