--- a/4-Rspnsv-Web-Design/grid.html
+++ b/4-Rspnsv-Web-Design/grid.html
@@ -10,6 +10,7 @@
             background: rgba(0,0,0,.5);
             display:grid;
             grid-template-columns: auto auto auto;
+            grid-template-rows: 50px 50px;
          }
 
          .child1 {
