Complete module 5 - lesson 10

--- a/5-CSS-Flexbox/flexbox1.html
+++ b/5-CSS-Flexbox/flexbox1.html
@@ -8,9 +8,9 @@
 
             #parent { 
                 background: lightblue; 
-                padding: 10px; 
                 display: flex;
-                flex-direction: row;
+                flex-flow: row wrap;
+                justify-content: space-between;
             }
             .childitem {  
                 width: 100px;
