--- a/5-CSS-Flexbox/flexbox1.html
+++ b/5-CSS-Flexbox/flexbox1.html
@@ -10,7 +10,7 @@
                 background: lightblue; 
                 display: flex;
                 flex-flow: row wrap;
-                justify-content: space-between;
+                justify-content: space-around;
             }
             .childitem {  
                 width: 100px;
