--- a/5-CSS-Flexbox/flexbox2.html
+++ b/5-CSS-Flexbox/flexbox2.html
@@ -36,6 +36,7 @@
             background: rgba(0,0,0,.25);
             display: flex;
             justify-content: center;
+            margin-bottom: 10px;
          }
 
          .heroGraphic {
@@ -59,9 +60,9 @@
          }
 
          #articles {
-            background: rgba(0,0,0,.25);
             display: flex;
             justify-content: center;
+            margin-bottom: 10px;
          }
 
          .article-container {
@@ -112,7 +113,7 @@
          
          <div class="heroGraphic"><img src="https://via.placeholder.com/500x500px"></div>
 
-         <div>
+         <div style="display: flex; flex-direction: column; justify-content: center;">
          
             <div class="heroHeading"><h1>Lorem ipsum dolor sit amet, consectetur</h1></div>
             <div class="heroButton">Hero Button</div>
