--- a/6-Intro-to-Bootstrap/bootstrap-practice.html
+++ b/6-Intro-to-Bootstrap/bootstrap-practice.html
@@ -8,22 +8,29 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-        <title>Hello, world!</title>
+        <title>Bootstrap Practice</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-sm">
-                    One of three columns
+                <div class="col">
+                    <button type="button" class="btn btn-outline-success" onClick="changeText()">Press Me</button>
                 </div>
-                <div class="col-sm">
-                    One of three columns
+                <div class="col">
+                    
                 </div>
-                <div class="col-sm">
-                    One of three columns
+                <div class="col" id='display'>
+                    Button Status
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript"> 
+            let display = document.getElementById('display');
+
+            function changeText() {
+                display.innerHTML = 'Button Pressed'
+            }
 
     <!-- Optional JavaScript; choose one of the two! -->
 
