--- a/6-Intro-to-Bootstrap/bootstrap-practice.html
+++ b/6-Intro-to-Bootstrap/bootstrap-practice.html
@@ -25,12 +25,15 @@
             </div>
         </div>
 
-        <script type="text/javascript"> 
-            let display = document.getElementById('display');
+        <script type="text/javascript">
+            
+            let display = document.getElementById('display')
 
             function changeText() {
-                display.innerHTML = 'Button Pressed'
+                display.innerHTML = "Button Pressed";
             }
+
+        </script>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -39,7 +42,7 @@
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></scri>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
     </body>
